src/css/_blog.scss
@use "sass:color";
@use "variables";
@use "mixins";

section#blogs {
  background: var(--darkGradient);
  color: variables.$white;

  & > * {
    margin: 0 auto;
  }
}

section#articles {
  & > * {
    margin: 0 auto;
  }

  .wrapper {
    padding: 2rem;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between !important;
    column-gap: 2rem;
    row-gap: 4rem;

    position: relative;
    z-index: 1;

    .blog-snippet-container {
      $lazerHeight: 10px;
      $borderRadius: 15px;
      $backgroundColor: #243c54;
      $transitionDuration: 0.2s;
      $borderWidth: 2px;
      $lazerColor: variables.$lightblue;

      flex: 1;
      min-width: 18.5rem;
      width: 100%;
      position: relative;
      background-color: $backgroundColor;
      box-shadow: 0px -4px 10px variables.$darkerblue;
      border-radius: $borderRadius;
      transition: box-shadow 0s;
      display: flex;
      flex-flow: column;
      align-items: center;
      justify-content: flex-end;

      &:hover {
        box-shadow: none;
        transition: box-shadow calc($transitionDuration * 3) ease-in;

        &::before {
          width: calc(100% + calc(2 * $borderWidth));
          height: calc(100% + calc(2 * $borderWidth));
          transition: width $transitionDuration,
            height calc($transitionDuration * 1.2) ease-in
              calc($transitionDuration * 0.9);
        }

        &::after {
          width: 95%;
          bottom: calc(-1 * $borderWidth);
          border-bottom-color: $lazerColor;
          transition: width $transitionDuration ease-out,
            bottom calc($transitionDuration * 0.5) ease-in;
        }
      }

      &::before {
        content: "";
        position: absolute;
        bottom: calc(-1 * $borderWidth);
        width: 0;
        height: calc(6 * $lazerHeight);
        z-index: -1;
        border: $borderWidth solid $lazerColor;
        box-shadow: 0 0px 10px $lazerColor;
        border-radius: calc($borderRadius * 1.1);
        transition: height calc($transitionDuration * 1.5) ease-out,
          width $transitionDuration calc($transitionDuration * 1.2);
        background-color: red;
      }

      &::after {
        content: "";
        position: absolute;
        bottom: calc(calc(calc($lazerHeight / 2) + $borderWidth) * -1);
        width: 25%;
        min-height: 0;
        height: $lazerHeight;
        border: none;
        border-bottom: $borderWidth solid transparent;
        border-radius: $lazerHeight;
        background-color: $lazerColor;
        border-radius: calc($borderRadius * 1.1);
        transition: width $transitionDuration ease-in
            calc($transitionDuration * 1.2),
          bottom calc($transitionDuration * 0.5) ease-out
            calc($transitionDuration * 1.2);
      }

      .blog-snippet {
        border-radius: $borderRadius;
        transition: 0.1s;
        z-index: 2;
        backdrop-filter: blur(25px);
        height: 100%;
        width: 100%;
        padding-bottom: 60px;

        .read-more {
          font-size: 0.9rem;
          position: absolute;
          bottom: 30px;
        }

        a.read-more {
          display: inline-block;
          width: 40%;
          @include mixins.arrows(variables.$white);
          .arrow_box_right {
            margin-left: -0.6rem;
          }
          transition: width 1s ease-in-out;
          &:hover {
            @include mixins.arrows(variables.$lightblue);
            color: variables.$lightblue;
            width: 75%;
          }
        }

        img {
          max-width: 100%;
        }

        .img-container {
          height: 200px;
          background-size: cover;
          background-position: 50%;
          border-top-left-radius: 15px;
          border-top-right-radius: 15px;
        }

        & > div {
          padding: 1rem 3rem;
          h2 {
            @include mixins.separator(variables.$white);
          }

          p {
            font-size: 0.9rem;
            line-height: 1.3rem;
          }
        }
      }
    }
  }

  @include mixins.tags(variables.$lightgrey);
  ul.tags {
    li a {
      color: variables.$lightgrey;
    }
  }
}

section#blog {
  background: variables.$white;
  & > * {
    margin: 0 auto;
  }
  article {
    & > img {
      max-width: 100%;
      width: 100%;
      height: auto;
    }
    & > .wrapper-content {
      margin-left: 1rem;
      margin-right: 1rem;

      & > h2 {
        @include mixins.separator(variables.$black);
        letter-spacing: initial;
      }
      .center {
        text-align: center;
      }
      .content {
        letter-spacing: initial;
        a {
          color: variables.$lightblue;
          word-wrap: break-word;

          &:hover {
            color: color.adjust(variables.$lightblue, $lightness: -10%);
          }
        }
        margin: 0.5rem;
        color: variables.$darkgrey;
        font-family: "Montserrat Light", "Helvetica Neue", Arial, sans-serif;
        h1,
        h2,
        h3,
        h4,
        h5,
        h6 {
          color: variables.$black;
          font-family: "Montserrat", Helvetica, Arial, sans-serif;
        }
        .hljs {
          font-size: 1rem;
        }
        code:not(.hljs) {
          background: #eee;
          padding: 4px;
          border-radius: 4px;
          border: 1px solid gainsboro;
        }

        @include mixins.separator(variables.$black);
        pre {
          width: 100%;
          overflow: auto;
        }
        .inlineBoxes {
          img {
            padding: 1rem;
            max-width: 20rem;
          }
        }
        ul {
          list-style: disc inside;
          li {
            > p {
              display: inline;
            }
          }
        }
        .underline {
          text-decoration: underline;
        }
        iframe {
          max-width: 100%;
        }
      }
      .content-footer {
        margin: 1rem 0;
        display: flex;
        flex-direction: column;
        justify-content: space-between;

        .tags {
          flex: 1;
        }

        section#author {
          text-align: right;
          align-self: center;
          flex: 0.5;
          color: variables.$darkgrey;
          font-size: 0.7rem;
          .author-name {
            background: var(--gradient);
            color: variables.$white;
            padding: 0.5rem 1rem;
            border-radius: 0.75rem;
          }
        }
      }
    }
  }
  a {
    color: variables.$darkgrey;
  }

  @include mixins.tags(variables.$lightgrey);
}

@media screen and (max-width: variables.$tablet) {
  section#articles {
    .wrapper {
      & > div {
        min-width: 51%; //to force items to flow one below the other
        max-width: 700px;
      }
    }
  }
}

@media screen and (min-width: variables.$smalldesktop) {
  section#articles {
    .wrapper {
      justify-content: start;
      & > div {
        min-width: calc(100% / 3 - 4rem);
        max-width: calc(100% / 3 - 4rem);
      }
    }
  }
}

@media screen and (min-width: variables.$desktop) {
  section#articles {
    & > * {
      width: 1200px;
    }
    .wrapper {
      & > div {
        &:nth-child(3n) {
          margin-right: 0 !important;
        }
      }
    }
  }
  section#blog {
    & > * {
      width: 900px;
    }
    article {
      .content {
        margin: inherit;
      }
      .content-footer {
        flex-direction: row;
      }
    }
  }
}

